sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:9: error: '=' expected but integer literal found.
var tri 2 = true
        ^AlgCocktailSort3:11: error: illegal start of simple expression
do {
^AlgCocktailSort3:14: error: ';' expected but integer literal found.
tri 2 = false
    ^