sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.code
def cocktailSort3() {

var l = getNombreValeurs()
var a = 0
var b = l-1

var tri = true
var tri 2 = true

do {
	
tri = false
tri 2 = false

for (i <- a to b-1)
		{if (plusPetit (i+1, i)) {echange(i,i+1); tri = true;}}
	b = b -1

if (!tri) {return}

for (i <- b to a+1 by -1)
		{if (plusPetit (i,i-1)) {echange(i,i-1); tri = true; tri2 = true}}
	a = a +1
if (!tri2) {return}

}
while (tri)




}
